// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chips 1`] = `
<div
  class="Chipsstyles__Box-sc-1xafpmg-0 jnPUVr"
>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 fymOnN"
    id="1"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kOgGBY"
    id="2"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kOgGBY"
    id="3"
    role="option"
  >
    Chip
  </div>
</div>
`;

exports[`Chips w/ active 1`] = `
<div
  class="Chipsstyles__Box-sc-1xafpmg-0 jnPUVr"
>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 fymOnN"
    id="1"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kOgGBY"
    id="2"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kOgGBY"
    id="3"
    role="option"
  >
    Chip
  </div>
</div>
`;

exports[`Chips w/ align 1`] = `
<div
  class="Chipsstyles__Box-sc-1xafpmg-0 yPYKc"
>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 fymOnN"
    id="1"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kOgGBY"
    id="2"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kOgGBY"
    id="3"
    role="option"
  >
    Chip
  </div>
</div>
`;

exports[`Chips w/ any props 1`] = `
<div
  class="Chipsstyles__Box-sc-1xafpmg-0 jnPUVr className"
  id="id"
>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kOgGBY"
    id="1"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kOgGBY"
    id="2"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kOgGBY"
    id="3"
    role="option"
  >
    Chip
  </div>
</div>
`;

exports[`Chips w/ design 1`] = `
<div
  class="Chipsstyles__Box-sc-1xafpmg-0 jnPUVr"
>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 GjXIy"
    id="1"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kOgGBY"
    id="2"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kOgGBY"
    id="3"
    role="option"
  >
    Chip
  </div>
</div>
`;

exports[`Chips w/ design 2`] = `
<div
  class="Chipsstyles__Box-sc-1xafpmg-0 jnPUVr"
>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 fymOnN"
    id="1"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kOgGBY"
    id="2"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kOgGBY"
    id="3"
    role="option"
  >
    Chip
  </div>
</div>
`;

exports[`Chips w/ design 3`] = `
<div
  class="Chipsstyles__Box-sc-1xafpmg-0 jnPUVr"
>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 hcRtct"
    id="1"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kohHQH"
    id="2"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kohHQH"
    id="3"
    role="option"
  >
    Chip
  </div>
</div>
`;

exports[`Chips w/ disabled 1`] = `
<div
  class="Chipsstyles__Box-sc-1xafpmg-0 jnPUVr"
>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 jAAPqS"
    disabled=""
    id="1"
    role="option"
    tabindex="-1"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 iCxqMm"
    disabled=""
    id="2"
    role="option"
    tabindex="-1"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 iCxqMm"
    disabled=""
    id="3"
    role="option"
    tabindex="-1"
  >
    Chip
  </div>
</div>
`;

exports[`Chips w/ disabled 2`] = `
<div
  class="Chipsstyles__Box-sc-1xafpmg-0 jnPUVr"
>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 lhvWtl"
    disabled=""
    id="1"
    role="option"
    tabindex="-1"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 iCxqMm"
    disabled=""
    id="2"
    role="option"
    tabindex="-1"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 iCxqMm"
    disabled=""
    id="3"
    role="option"
    tabindex="-1"
  >
    Chip
  </div>
</div>
`;

exports[`Chips w/ disabled 3`] = `
<div
  class="Chipsstyles__Box-sc-1xafpmg-0 jnPUVr"
>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kGYMjp"
    disabled=""
    id="1"
    role="option"
    tabindex="-1"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 jOYZan"
    disabled=""
    id="2"
    role="option"
    tabindex="-1"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 jOYZan"
    disabled=""
    id="3"
    role="option"
    tabindex="-1"
  >
    Chip
  </div>
</div>
`;

exports[`Chips w/ multiple active 1`] = `
<div
  class="Chipsstyles__Box-sc-1xafpmg-0 jnPUVr"
>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 kOgGBY"
    id="1"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 fymOnN"
    id="2"
    role="option"
  >
    Chip
  </div>
  <div
    class="Chipsstyles__Item-sc-1xafpmg-1 fymOnN"
    id="3"
    role="option"
  >
    Chip
  </div>
</div>
`;
